# varz

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml  rename.py  requirements.txt  setup.cfg  setup.py  todo.tasks
.github/workflows/: ci.yml
doc/: readme.rst
doc/source/: varz.core.rst
docs/: Makefile  api.rst  conf.py  readme.rst
docs/_build/doctrees/: environment.pickle  index.doctree  readme.doctree
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/varz/: minimise.html  numpy.html  spec.html  torch.html  util.html  vars.html
docs/_build/html/_sources/: readme.rst.txt
docs/_build/html/_sources/source/: varz.autograd.minimise.rst.txt  varz.autograd.rst.txt  varz.minimise.rst.txt  varz.numpy.rst.txt  varz.spec.rst.txt  (+5 more)
docs/_build/html/source/: varz.autograd.html  varz.autograd.minimise.html  varz.minimise.html  varz.numpy.html  varz.spec.html  varz.tensorflow.html  varz.tensorflow.minimise.html  varz.torch.html  varz.torch.minimise.html  varz.util.html  varz.vars.html
docs/source/: varz.util.rst
tests/: __init__.py  test_autograd.py  test_minimise.py  test_numpy.py  test_spec.py  test_torch.py  test_util.py  test_vars.py  util.py
varz/: __init__.py  adam.py  minimise.py  numpy.py  spec.py  torch.py  util.py  vars.py
varz/autograd/: __init__.py  minimise.py
varz/jax/: __init__.py  minimise.py
varz/tensorflow/: __init__.py  minimise.py
varz/torch/: __init__.py  minimise.py
(+2 files in other folders)
