[metadata]
name = varz
version = 0.6.1
author = Wessel Bruinsma
author_email = wessel.p.bruinsma@gmail.com
description = Painless variables in PyTorch and TensorFlow
url = https://github.com/wesselb/varz
license = MIT
license_file = LICENCE.txt
long_description = file: README.md
long_description_content_type = text/markdown
